src/quantl.output
Grammaire

    0 $accept: programme $end

    1 programme: ε
    2          | liste_instructions

    3 liste_instructions: instruction
    4                   | liste_instructions instruction

    5 instruction: decl_qreg
    6            | decl_creg
    7            | instr_porte
    8            | instr_mesure
    9            | instr_if
   10            | instr_print
   11            | instr_barrier
   12            | instr_repeat

   13 decl_qreg: QREG IDENT '[' ENTIER ']' ';'

   14 decl_creg: CREG IDENT '[' ENTIER ']' ';'

   15 instr_porte: PORTE1Q IDENT '[' ENTIER ']' ';'
   16            | PORTE1Q IDENT '[' ENTIER ']' '(' angle ')' ';'
   17            | PORTEROT IDENT '[' ENTIER ']' '(' angle ')' ';'
   18            | PORTE2Q IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'
   19            | TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

   20 instr_mesure: MEASURE IDENT '[' ENTIER ']' FLECHE IDENT '[' ENTIER ']' ';'

   21 instr_if: IF '(' IDENT '[' ENTIER ']' EGALEGAL ENTIER ')' instruction

   22 instr_print: PRINT IDENT ';'

   23 instr_barrier: BARRIER ';'
   24              | BARRIER liste_ref_qubits ';'

   25 liste_ref_qubits: IDENT '[' ENTIER ']'
   26                 | liste_ref_qubits ',' IDENT '[' ENTIER ']'

   27 instr_repeat: REPEAT '(' ENTIER ')' '{' liste_instructions '}'

   28 angle: FLOTTANT
   29      | ENTIER


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '(' (40) 16 17 21 27
    ')' (41) 16 17 21 27
    ',' (44) 18 19 26
    ';' (59) 13 14 15 16 17 18 19 20 22 23 24
    '[' (91) 13 14 15 16 17 18 19 20 21 25 26
    ']' (93) 13 14 15 16 17 18 19 20 21 25 26
    '{' (123) 27
    '}' (125) 27
    error (256)
    QREG (258) 13
    CREG (259) 14
    MEASURE (260) 20
    IF (261) 21
    PRINT (262) 22
    BARRIER (263) 23 24
    REPEAT (264) 27
    TOFFOLI (265) 19
    FLECHE (266) 20
    EGALEGAL (267) 21
    PORTE1Q <str> (268) 15 16
    PORTE2Q <str> (269) 18
    PORTEROT <str> (270) 17
    IDENT <str> (271) 13 14 15 16 17 18 19 20 21 22 25 26
    ENTIER <ival> (272) 13 14 15 16 17 18 19 20 21 25 26 27 29
    FLOTTANT <dval> (273) 28


Non-terminaux, suivis des règles où ils apparaissent

    $accept (27)
        à gauche: 0
    programme <noeud> (28)
        à gauche: 1 2
        à droite: 0
    liste_instructions <noeud> (29)
        à gauche: 3 4
        à droite: 2 4 27
    instruction <noeud> (30)
        à gauche: 5 6 7 8 9 10 11 12
        à droite: 3 4 21
    decl_qreg <noeud> (31)
        à gauche: 13
        à droite: 5
    decl_creg <noeud> (32)
        à gauche: 14
        à droite: 6
    instr_porte <noeud> (33)
        à gauche: 15 16 17 18 19
        à droite: 7
    instr_mesure <noeud> (34)
        à gauche: 20
        à droite: 8
    instr_if <noeud> (35)
        à gauche: 21
        à droite: 9
    instr_print <noeud> (36)
        à gauche: 22
        à droite: 10
    instr_barrier <noeud> (37)
        à gauche: 23 24
        à droite: 11
    liste_ref_qubits <noeud> (38)
        à gauche: 25 26
        à droite: 24 26
    instr_repeat <noeud> (39)
        à gauche: 27
        à droite: 12
    angle <dval> (40)
        à gauche: 28 29
        à droite: 16 17


État 0

    0 $accept: • programme $end

    QREG      décalage et aller à l'état 1
    CREG      décalage et aller à l'état 2
    MEASURE   décalage et aller à l'état 3
    IF        décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    BARRIER   décalage et aller à l'état 6
    REPEAT    décalage et aller à l'état 7
    TOFFOLI   décalage et aller à l'état 8
    PORTE1Q   décalage et aller à l'état 9
    PORTE2Q   décalage et aller à l'état 10
    PORTEROT  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 1 (programme)

    programme           aller à l'état 12
    liste_instructions  aller à l'état 13
    instruction         aller à l'état 14
    decl_qreg           aller à l'état 15
    decl_creg           aller à l'état 16
    instr_porte         aller à l'état 17
    instr_mesure        aller à l'état 18
    instr_if            aller à l'état 19
    instr_print         aller à l'état 20
    instr_barrier       aller à l'état 21
    instr_repeat        aller à l'état 22


État 1

   13 decl_qreg: QREG • IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 23


État 2

   14 decl_creg: CREG • IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 24


État 3

   20 instr_mesure: MEASURE • IDENT '[' ENTIER ']' FLECHE IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 25


État 4

   21 instr_if: IF • '(' IDENT '[' ENTIER ']' EGALEGAL ENTIER ')' instruction

    '('  décalage et aller à l'état 26


État 5

   22 instr_print: PRINT • IDENT ';'

    IDENT  décalage et aller à l'état 27


État 6

   23 instr_barrier: BARRIER • ';'
   24              | BARRIER • liste_ref_qubits ';'

    IDENT  décalage et aller à l'état 28
    ';'    décalage et aller à l'état 29

    liste_ref_qubits  aller à l'état 30


État 7

   27 instr_repeat: REPEAT • '(' ENTIER ')' '{' liste_instructions '}'

    '('  décalage et aller à l'état 31


État 8

   19 instr_porte: TOFFOLI • IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 32


État 9

   15 instr_porte: PORTE1Q • IDENT '[' ENTIER ']' ';'
   16            | PORTE1Q • IDENT '[' ENTIER ']' '(' angle ')' ';'

    IDENT  décalage et aller à l'état 33


État 10

   18 instr_porte: PORTE2Q • IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 34


État 11

   17 instr_porte: PORTEROT • IDENT '[' ENTIER ']' '(' angle ')' ';'

    IDENT  décalage et aller à l'état 35


État 12

    0 $accept: programme • $end

    $end  décalage et aller à l'état 36


État 13

    2 programme: liste_instructions •
    4 liste_instructions: liste_instructions • instruction

    QREG      décalage et aller à l'état 1
    CREG      décalage et aller à l'état 2
    MEASURE   décalage et aller à l'état 3
    IF        décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    BARRIER   décalage et aller à l'état 6
    REPEAT    décalage et aller à l'état 7
    TOFFOLI   décalage et aller à l'état 8
    PORTE1Q   décalage et aller à l'état 9
    PORTE2Q   décalage et aller à l'état 10
    PORTEROT  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 2 (programme)

    instruction    aller à l'état 37
    decl_qreg      aller à l'état 15
    decl_creg      aller à l'état 16
    instr_porte    aller à l'état 17
    instr_mesure   aller à l'état 18
    instr_if       aller à l'état 19
    instr_print    aller à l'état 20
    instr_barrier  aller à l'état 21
    instr_repeat   aller à l'état 22


État 14

    3 liste_instructions: instruction •

    $défaut  réduction par utilisation de la règle 3 (liste_instructions)


État 15

    5 instruction: decl_qreg •

    $défaut  réduction par utilisation de la règle 5 (instruction)


État 16

    6 instruction: decl_creg •

    $défaut  réduction par utilisation de la règle 6 (instruction)


État 17

    7 instruction: instr_porte •

    $défaut  réduction par utilisation de la règle 7 (instruction)


État 18

    8 instruction: instr_mesure •

    $défaut  réduction par utilisation de la règle 8 (instruction)


État 19

    9 instruction: instr_if •

    $défaut  réduction par utilisation de la règle 9 (instruction)


État 20

   10 instruction: instr_print •

    $défaut  réduction par utilisation de la règle 10 (instruction)


État 21

   11 instruction: instr_barrier •

    $défaut  réduction par utilisation de la règle 11 (instruction)


État 22

   12 instruction: instr_repeat •

    $défaut  réduction par utilisation de la règle 12 (instruction)


État 23

   13 decl_qreg: QREG IDENT • '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 38


État 24

   14 decl_creg: CREG IDENT • '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 39


État 25

   20 instr_mesure: MEASURE IDENT • '[' ENTIER ']' FLECHE IDENT '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 40


État 26

   21 instr_if: IF '(' • IDENT '[' ENTIER ']' EGALEGAL ENTIER ')' instruction

    IDENT  décalage et aller à l'état 41


État 27

   22 instr_print: PRINT IDENT • ';'

    ';'  décalage et aller à l'état 42


État 28

   25 liste_ref_qubits: IDENT • '[' ENTIER ']'

    '['  décalage et aller à l'état 43


État 29

   23 instr_barrier: BARRIER ';' •

    $défaut  réduction par utilisation de la règle 23 (instr_barrier)


État 30

   24 instr_barrier: BARRIER liste_ref_qubits • ';'
   26 liste_ref_qubits: liste_ref_qubits • ',' IDENT '[' ENTIER ']'

    ';'  décalage et aller à l'état 44
    ','  décalage et aller à l'état 45


État 31

   27 instr_repeat: REPEAT '(' • ENTIER ')' '{' liste_instructions '}'

    ENTIER  décalage et aller à l'état 46


État 32

   19 instr_porte: TOFFOLI IDENT • '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 47


État 33

   15 instr_porte: PORTE1Q IDENT • '[' ENTIER ']' ';'
   16            | PORTE1Q IDENT • '[' ENTIER ']' '(' angle ')' ';'

    '['  décalage et aller à l'état 48


État 34

   18 instr_porte: PORTE2Q IDENT • '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 49


État 35

   17 instr_porte: PORTEROT IDENT • '[' ENTIER ']' '(' angle ')' ';'

    '['  décalage et aller à l'état 50


État 36

    0 $accept: programme $end •

    $défaut  accepter


État 37

    4 liste_instructions: liste_instructions instruction •

    $défaut  réduction par utilisation de la règle 4 (liste_instructions)


État 38

   13 decl_qreg: QREG IDENT '[' • ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 51


État 39

   14 decl_creg: CREG IDENT '[' • ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 52


État 40

   20 instr_mesure: MEASURE IDENT '[' • ENTIER ']' FLECHE IDENT '[' ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 53


État 41

   21 instr_if: IF '(' IDENT • '[' ENTIER ']' EGALEGAL ENTIER ')' instruction

    '['  décalage et aller à l'état 54


État 42

   22 instr_print: PRINT IDENT ';' •

    $défaut  réduction par utilisation de la règle 22 (instr_print)


État 43

   25 liste_ref_qubits: IDENT '[' • ENTIER ']'

    ENTIER  décalage et aller à l'état 55


État 44

   24 instr_barrier: BARRIER liste_ref_qubits ';' •

    $défaut  réduction par utilisation de la règle 24 (instr_barrier)


État 45

   26 liste_ref_qubits: liste_ref_qubits ',' • IDENT '[' ENTIER ']'

    IDENT  décalage et aller à l'état 56


État 46

   27 instr_repeat: REPEAT '(' ENTIER • ')' '{' liste_instructions '}'

    ')'  décalage et aller à l'état 57


État 47

   19 instr_porte: TOFFOLI IDENT '[' • ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 58


État 48

   15 instr_porte: PORTE1Q IDENT '[' • ENTIER ']' ';'
   16            | PORTE1Q IDENT '[' • ENTIER ']' '(' angle ')' ';'

    ENTIER  décalage et aller à l'état 59


État 49

   18 instr_porte: PORTE2Q IDENT '[' • ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 60


État 50

   17 instr_porte: PORTEROT IDENT '[' • ENTIER ']' '(' angle ')' ';'

    ENTIER  décalage et aller à l'état 61


État 51

   13 decl_qreg: QREG IDENT '[' ENTIER • ']' ';'

    ']'  décalage et aller à l'état 62


État 52

   14 decl_creg: CREG IDENT '[' ENTIER • ']' ';'

    ']'  décalage et aller à l'état 63


État 53

   20 instr_mesure: MEASURE IDENT '[' ENTIER • ']' FLECHE IDENT '[' ENTIER ']' ';'

    ']'  décalage et aller à l'état 64


État 54

   21 instr_if: IF '(' IDENT '[' • ENTIER ']' EGALEGAL ENTIER ')' instruction

    ENTIER  décalage et aller à l'état 65


État 55

   25 liste_ref_qubits: IDENT '[' ENTIER • ']'

    ']'  décalage et aller à l'état 66


État 56

   26 liste_ref_qubits: liste_ref_qubits ',' IDENT • '[' ENTIER ']'

    '['  décalage et aller à l'état 67


État 57

   27 instr_repeat: REPEAT '(' ENTIER ')' • '{' liste_instructions '}'

    '{'  décalage et aller à l'état 68


État 58

   19 instr_porte: TOFFOLI IDENT '[' ENTIER • ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    ']'  décalage et aller à l'état 69


État 59

   15 instr_porte: PORTE1Q IDENT '[' ENTIER • ']' ';'
   16            | PORTE1Q IDENT '[' ENTIER • ']' '(' angle ')' ';'

    ']'  décalage et aller à l'état 70


État 60

   18 instr_porte: PORTE2Q IDENT '[' ENTIER • ']' ',' IDENT '[' ENTIER ']' ';'

    ']'  décalage et aller à l'état 71


État 61

   17 instr_porte: PORTEROT IDENT '[' ENTIER • ']' '(' angle ')' ';'

    ']'  décalage et aller à l'état 72


État 62

   13 decl_qreg: QREG IDENT '[' ENTIER ']' • ';'

    ';'  décalage et aller à l'état 73


État 63

   14 decl_creg: CREG IDENT '[' ENTIER ']' • ';'

    ';'  décalage et aller à l'état 74


État 64

   20 instr_mesure: MEASURE IDENT '[' ENTIER ']' • FLECHE IDENT '[' ENTIER ']' ';'

    FLECHE  décalage et aller à l'état 75


État 65

   21 instr_if: IF '(' IDENT '[' ENTIER • ']' EGALEGAL ENTIER ')' instruction

    ']'  décalage et aller à l'état 76


État 66

   25 liste_ref_qubits: IDENT '[' ENTIER ']' •

    $défaut  réduction par utilisation de la règle 25 (liste_ref_qubits)


État 67

   26 liste_ref_qubits: liste_ref_qubits ',' IDENT '[' • ENTIER ']'

    ENTIER  décalage et aller à l'état 77


État 68

   27 instr_repeat: REPEAT '(' ENTIER ')' '{' • liste_instructions '}'

    QREG      décalage et aller à l'état 1
    CREG      décalage et aller à l'état 2
    MEASURE   décalage et aller à l'état 3
    IF        décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    BARRIER   décalage et aller à l'état 6
    REPEAT    décalage et aller à l'état 7
    TOFFOLI   décalage et aller à l'état 8
    PORTE1Q   décalage et aller à l'état 9
    PORTE2Q   décalage et aller à l'état 10
    PORTEROT  décalage et aller à l'état 11

    liste_instructions  aller à l'état 78
    instruction         aller à l'état 14
    decl_qreg           aller à l'état 15
    decl_creg           aller à l'état 16
    instr_porte         aller à l'état 17
    instr_mesure        aller à l'état 18
    instr_if            aller à l'état 19
    instr_print         aller à l'état 20
    instr_barrier       aller à l'état 21
    instr_repeat        aller à l'état 22


État 69

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' • ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    ','  décalage et aller à l'état 79


État 70

   15 instr_porte: PORTE1Q IDENT '[' ENTIER ']' • ';'
   16            | PORTE1Q IDENT '[' ENTIER ']' • '(' angle ')' ';'

    ';'  décalage et aller à l'état 80
    '('  décalage et aller à l'état 81


État 71

   18 instr_porte: PORTE2Q IDENT '[' ENTIER ']' • ',' IDENT '[' ENTIER ']' ';'

    ','  décalage et aller à l'état 82


État 72

   17 instr_porte: PORTEROT IDENT '[' ENTIER ']' • '(' angle ')' ';'

    '('  décalage et aller à l'état 83


État 73

   13 decl_qreg: QREG IDENT '[' ENTIER ']' ';' •

    $défaut  réduction par utilisation de la règle 13 (decl_qreg)


État 74

   14 decl_creg: CREG IDENT '[' ENTIER ']' ';' •

    $défaut  réduction par utilisation de la règle 14 (decl_creg)


État 75

   20 instr_mesure: MEASURE IDENT '[' ENTIER ']' FLECHE • IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 84


État 76

   21 instr_if: IF '(' IDENT '[' ENTIER ']' • EGALEGAL ENTIER ')' instruction

    EGALEGAL  décalage et aller à l'état 85


État 77

   26 liste_ref_qubits: liste_ref_qubits ',' IDENT '[' ENTIER • ']'

    ']'  décalage et aller à l'état 86


État 78

    4 liste_instructions: liste_instructions • instruction
   27 instr_repeat: REPEAT '(' ENTIER ')' '{' liste_instructions • '}'

    QREG      décalage et aller à l'état 1
    CREG      décalage et aller à l'état 2
    MEASURE   décalage et aller à l'état 3
    IF        décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    BARRIER   décalage et aller à l'état 6
    REPEAT    décalage et aller à l'état 7
    TOFFOLI   décalage et aller à l'état 8
    PORTE1Q   décalage et aller à l'état 9
    PORTE2Q   décalage et aller à l'état 10
    PORTEROT  décalage et aller à l'état 11
    '}'       décalage et aller à l'état 87

    instruction    aller à l'état 37
    decl_qreg      aller à l'état 15
    decl_creg      aller à l'état 16
    instr_porte    aller à l'état 17
    instr_mesure   aller à l'état 18
    instr_if       aller à l'état 19
    instr_print    aller à l'état 20
    instr_barrier  aller à l'état 21
    instr_repeat   aller à l'état 22


État 79

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' • IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 88


État 80

   15 instr_porte: PORTE1Q IDENT '[' ENTIER ']' ';' •

    $défaut  réduction par utilisation de la règle 15 (instr_porte)


État 81

   16 instr_porte: PORTE1Q IDENT '[' ENTIER ']' '(' • angle ')' ';'

    ENTIER    décalage et aller à l'état 89
    FLOTTANT  décalage et aller à l'état 90

    angle  aller à l'état 91


État 82

   18 instr_porte: PORTE2Q IDENT '[' ENTIER ']' ',' • IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 92


État 83

   17 instr_porte: PORTEROT IDENT '[' ENTIER ']' '(' • angle ')' ';'

    ENTIER    décalage et aller à l'état 89
    FLOTTANT  décalage et aller à l'état 90

    angle  aller à l'état 93


État 84

   20 instr_mesure: MEASURE IDENT '[' ENTIER ']' FLECHE IDENT • '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 94


État 85

   21 instr_if: IF '(' IDENT '[' ENTIER ']' EGALEGAL • ENTIER ')' instruction

    ENTIER  décalage et aller à l'état 95


État 86

   26 liste_ref_qubits: liste_ref_qubits ',' IDENT '[' ENTIER ']' •

    $défaut  réduction par utilisation de la règle 26 (liste_ref_qubits)


État 87

   27 instr_repeat: REPEAT '(' ENTIER ')' '{' liste_instructions '}' •

    $défaut  réduction par utilisation de la règle 27 (instr_repeat)


État 88

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT • '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 96


État 89

   29 angle: ENTIER •

    $défaut  réduction par utilisation de la règle 29 (angle)


État 90

   28 angle: FLOTTANT •

    $défaut  réduction par utilisation de la règle 28 (angle)


État 91

   16 instr_porte: PORTE1Q IDENT '[' ENTIER ']' '(' angle • ')' ';'

    ')'  décalage et aller à l'état 97


État 92

   18 instr_porte: PORTE2Q IDENT '[' ENTIER ']' ',' IDENT • '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 98


État 93

   17 instr_porte: PORTEROT IDENT '[' ENTIER ']' '(' angle • ')' ';'

    ')'  décalage et aller à l'état 99


État 94

   20 instr_mesure: MEASURE IDENT '[' ENTIER ']' FLECHE IDENT '[' • ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 100


État 95

   21 instr_if: IF '(' IDENT '[' ENTIER ']' EGALEGAL ENTIER • ')' instruction

    ')'  décalage et aller à l'état 101


État 96

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' • ENTIER ']' ',' IDENT '[' ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 102


État 97

   16 instr_porte: PORTE1Q IDENT '[' ENTIER ']' '(' angle ')' • ';'

    ';'  décalage et aller à l'état 103


État 98

   18 instr_porte: PORTE2Q IDENT '[' ENTIER ']' ',' IDENT '[' • ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 104


État 99

   17 instr_porte: PORTEROT IDENT '[' ENTIER ']' '(' angle ')' • ';'

    ';'  décalage et aller à l'état 105


État 100

   20 instr_mesure: MEASURE IDENT '[' ENTIER ']' FLECHE IDENT '[' ENTIER • ']' ';'

    ']'  décalage et aller à l'état 106


État 101

   21 instr_if: IF '(' IDENT '[' ENTIER ']' EGALEGAL ENTIER ')' • instruction

    QREG      décalage et aller à l'état 1
    CREG      décalage et aller à l'état 2
    MEASURE   décalage et aller à l'état 3
    IF        décalage et aller à l'état 4
    PRINT     décalage et aller à l'état 5
    BARRIER   décalage et aller à l'état 6
    REPEAT    décalage et aller à l'état 7
    TOFFOLI   décalage et aller à l'état 8
    PORTE1Q   décalage et aller à l'état 9
    PORTE2Q   décalage et aller à l'état 10
    PORTEROT  décalage et aller à l'état 11

    instruction    aller à l'état 107
    decl_qreg      aller à l'état 15
    decl_creg      aller à l'état 16
    instr_porte    aller à l'état 17
    instr_mesure   aller à l'état 18
    instr_if       aller à l'état 19
    instr_print    aller à l'état 20
    instr_barrier  aller à l'état 21
    instr_repeat   aller à l'état 22


État 102

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER • ']' ',' IDENT '[' ENTIER ']' ';'

    ']'  décalage et aller à l'état 108


État 103

   16 instr_porte: PORTE1Q IDENT '[' ENTIER ']' '(' angle ')' ';' •

    $défaut  réduction par utilisation de la règle 16 (instr_porte)


État 104

   18 instr_porte: PORTE2Q IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER • ']' ';'

    ']'  décalage et aller à l'état 109


État 105

   17 instr_porte: PORTEROT IDENT '[' ENTIER ']' '(' angle ')' ';' •

    $défaut  réduction par utilisation de la règle 17 (instr_porte)


État 106

   20 instr_mesure: MEASURE IDENT '[' ENTIER ']' FLECHE IDENT '[' ENTIER ']' • ';'

    ';'  décalage et aller à l'état 110


État 107

   21 instr_if: IF '(' IDENT '[' ENTIER ']' EGALEGAL ENTIER ')' instruction •

    $défaut  réduction par utilisation de la règle 21 (instr_if)


État 108

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' • ',' IDENT '[' ENTIER ']' ';'

    ','  décalage et aller à l'état 111


État 109

   18 instr_porte: PORTE2Q IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' • ';'

    ';'  décalage et aller à l'état 112


État 110

   20 instr_mesure: MEASURE IDENT '[' ENTIER ']' FLECHE IDENT '[' ENTIER ']' ';' •

    $défaut  réduction par utilisation de la règle 20 (instr_mesure)


État 111

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' • IDENT '[' ENTIER ']' ';'

    IDENT  décalage et aller à l'état 113


État 112

   18 instr_porte: PORTE2Q IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';' •

    $défaut  réduction par utilisation de la règle 18 (instr_porte)


État 113

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT • '[' ENTIER ']' ';'

    '['  décalage et aller à l'état 114


État 114

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' • ENTIER ']' ';'

    ENTIER  décalage et aller à l'état 115


État 115

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER • ']' ';'

    ']'  décalage et aller à l'état 116


État 116

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' • ';'

    ';'  décalage et aller à l'état 117


État 117

   19 instr_porte: TOFFOLI IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ',' IDENT '[' ENTIER ']' ';' •

    $défaut  réduction par utilisation de la règle 19 (instr_porte)
